--- a/angular1/app/billingCycle/form.html
+++ b/angular1/app/billingCycle/form.html
@@ -1,16 +1,18 @@
-<!-- <div role="form">
+<div role="form">
   <div class="box-body">
-    <field id="name" label="Nome" grid="12 4 4" placeholder="Informe o nome"
-      model="billingCycle.name"></field>
-    <field id="month" label="Mês" grid="12 4 4" placeholder="Informe o mês" type="number"
-      model="billingCycle.month"></field>
-    <field id="year" label="Ano" grid="12 4 4" placeholder="Informe o ano" type="number"
-      model="billingCycle.year"></field>
+    <field id="name" label="Nome" model="billingCycle.name"
+         placeholder="Informe o Nome" grid="12 6 4"></field>
+    <field id="month" label="Mês" model="billingCycle.month" type="number"
+         placeholder="Informe o Mês" grid="12 6 4"></field>
+    <field id="year" label="Ano" model="billingCycle.year" type="number"
+         placeholder="Informe o Ano" grid="12 6 4"></field>
+    <hr>
   </div>
   <div class="box-footer">
-    <button class="btn btn-primary" ng-click="create()">Incluir</button>
+    <button class="btn btn-primary"
+         ng-click="create()">Incluir</button>
     <button class="btn btn-info">Alterar</button>
     <button class="btn btn-danger">Excluir</button>
     <button class="btn btn-default">Cancelar</button>
   </div>
-</div> -->
+</div>
