--- a/angular1/app/billingCycle/tabs.html
+++ b/angular1/app/billingCycle/tabs.html
@@ -1,7 +1,7 @@
-<!-- <content-header title="Ciclo de Pagamentos" subtitle="Cadastro"></content-header>
+<content-header title="Ciclo de Pagamentos" subtitle="Cadastro"></content-header>
 
 <section class="content">
-  <div class="nav-tabs-custom" ng-controller="BillingCycleCtrl">
+  <div class="nav-tabs-custom" ng-controller="BillingCycleCtrl as bcCtrl">
     <ul class="nav nav-tabs">
       <li>
         <a href data-target="#tabList" data-toggle="tab">
@@ -25,10 +25,18 @@
       </li>
     </ul>
     <div class="tab-content">
-      <div class="tab-pane" id="tabList" ng-include="'billingCycle/list.html'"></div>
-      <div class="tab-pane" id="tabCreate" ng-include="'billingCycle/form.html'"></div>
-      <div class="tab-pane" id="tabUpdate" ng-include="'billingCycle/form.html'"></div>
-      <div class="tab-pane" id="tabDelete" ng-include="'billingCycle/form.html'"></div>
+      <div class="tab-pane"
+          id="tabList"
+          ng-include="'billingCycle/list.html'"></div>
+      <div class="tab-pane"
+          id="tabCreate"
+          ng-include="'billingCycle/form.html'"></div>
+      <div class="tab-pane"
+          id="tabUpdate"
+          ng-include="'billingCycle/form.html'"></div>
+      <div class="tab-pane"
+          id="tabDelete"
+          ng-include="'billingCycle/form.html'"></div>
     </div>
   </div>
-</section> -->
+</section>
