--- a/angular1/app/billingCycle/tabs.html
+++ b/angular1/app/billingCycle/tabs.html
@@ -3,22 +3,22 @@
 <section class="content">
   <div class="nav-tabs-custom" ng-controller="BillingCycleCtrl as bcCtrl">
     <ul class="nav nav-tabs">
-      <li>
+      <li ng-if="bcCtrl.tabList">
         <a href data-target="#tabList" data-toggle="tab">
           <i class="fa fa-bars">Lista</i>
         </a>
       </li>
-      <li>
+      <li ng-if="bcCtrl.tabCreate">
         <a href data-target="#tabCreate" data-toggle="tab">
           <i class="fa fa-plus">Incluir</i>
         </a>
       </li>
-      <li>
+      <li ng-if="bcCtrl.tabUpdate">
         <a href data-target="#tabUpdate" data-toggle="tab">
           <i class="fa fa-pencil">Alterar</i>
         </a>
       </li>
-      <li>
+      <li ng-if="bcCtrl.tabDelete">
         <a href data-target="#tabDelete" data-toggle="tab">
           <i class="fa fa-trash-o">Excluir</i>
         </a>
@@ -27,16 +27,20 @@
     <div class="tab-content">
       <div class="tab-pane"
           id="tabList"
-          ng-include="'billingCycle/list.html'"></div>
+          ng-include="'billingCycle/list.html'"
+          ng-if="bcCtrl.tabList" ></div>
       <div class="tab-pane"
           id="tabCreate"
-          ng-include="'billingCycle/form.html'"></div>
+          ng-include="'billingCycle/form.html'"
+          ng-if="bcCtrl.tabCreate" ></div>
       <div class="tab-pane"
           id="tabUpdate"
-          ng-include="'billingCycle/form.html'"></div>
+          ng-include="'billingCycle/form.html'"
+          ng-if="bcCtrl.tabUpdate"></div>
       <div class="tab-pane"
           id="tabDelete"
-          ng-include="'billingCycle/form.html'"></div>
+          ng-include="'billingCycle/form.html'"
+          ng-if="bcCtrl.tabDelete"></div>
     </div>
   </div>
 </section>
