Arrumado Dashboard estatisticas no listar

--- a/angular1/app/billingCycle/list.html
+++ b/angular1/app/billingCycle/list.html
@@ -1,4 +1,10 @@
 <div class="box-body">
+  <div>
+    <fieldset>
+      <legend>Estatisticas</legend>
+      <div ng-include="'dashboard/dashboard.html'"></div>
+    </fieldset>
+  </div>
   <table class="table">
     <thead>
       <tr>
