--- a/angular1/app/index.html
+++ b/angular1/app/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/assets/css/app.min.css">
 </head>
 <body class="skin-green fixed sidebar-mini">
-  <div class="wrapper">
+  <div class="wrapper" style="height: auto; min-height: 100%;">
     <header class="main-header" ng-include="'/template/header.html'"></header>
     <aside class="main-sidebar" ng-include="'/template/menu.html'"></aside>
     <div class="content-wrapper" ui-view></div>
